ros_dev_ws/log/build_2021-03-11_17-46-56/lora/stderr.log
  File "/home/pop/Documents/wqdrone/ros_dev_ws/install/lora/lib/python3.8/site-packages/lora/lora_wq_gps_receive.py", line 32
    pass
    ^
SyntaxError: invalid syntax

